# Thai-to-Denish

./: .gitignore  .replit  bot.py  keep_alive.py  pyproject.toml  replit.nix  requirements.txt  utils.py
